--- a/styles.css
+++ b/styles.css
@@ -12,28 +12,24 @@ body {
   text-align: center;
 }
 
-header{
+header, #navbar{
   width:100%;
   height:60px;
   background-color: rgb(224, 224, 224);
   position:fixed;
   top:0;
-  margin:auto;
   display:flex;
-  justify-content:space-between;
   align-items: center;
   border-bottom:2px solid black;
 }
 
 nav > ul {
   display:flex;
-  width:100%;
   margin:auto;
-  
 }
 
 nav > ul > li {
-  margin:100px;
+  margin:0 50px;
   font-size:20px;
   font-weight: bold;
   list-style: none;
@@ -49,19 +45,19 @@ a:hover{
   background-color:rgb(228, 179, 210);
 }
 
-#content {
-  margin-top:80px;
+#main {
+  margin-top:100px;
 }
 
 h1, p{
-  margin-bottom:20px;
+  margin:20px auto;
 }
 
 .image {
   max-width:500px;
-  max-width:500px;
   border-radius:5px;
-  margin:4px;
+  margin-bottom:4px;
+  padding:5px;
 }
 
 .image:hover{
@@ -69,9 +65,15 @@ h1, p{
   transition:400ms;
 }
 
+#projects{
+  margin:60px auto;
+  width:100%;
+}
+
 .project-tile{
   font-family: monospace;
-  margin-top:40px;
+  margin:30px auto;
+  max-width: 500px;
 }
 
 .block{
@@ -80,7 +82,6 @@ h1, p{
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding:5px 255px 15px 255px;
   background-color:gray;
   border-radius:5px;
 }
@@ -95,13 +96,15 @@ h1, p{
 }
 
 .text-project {
-  margin-top:20px;
-  width:500px;
   font-size: 20px;
+  width:400px;
+  margin:20px;
+  text-align: center;
 }
 
 #contact {
   border-top:1px solid black;
+  margin:30px auto;
 }
 
 #finale {
@@ -114,4 +117,20 @@ input {
   border-radius:5px;
   background-color:rgb(224, 224, 224);
   font-weight: bold;
+}
+
+@media only screen and (max-width:600px){
+  *{
+    overflow-x:hidden;
+  }
+
+  nav > ul > li {
+    margin:0px 15px;
+    font-size:15px;
+  }
+
+  .block{
+    width:80%;
+    padding:0;
+  }
 }
